applications/kube-ingress-dashboard/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-ingress-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-ingress-dashboard
  template:
    spec:
      serviceAccountName: kube-ingress-dashboard
      containers:
        - name: kube-ingress-dashboard
          image: ghcr.io/antvirf/kube-ingress-dashboard:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kube-ingress-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress-dashboard
spec:
  ingressClassName: ngrok
  rules:
    - host: ### YOUR NGROK DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-ingress-dashboard
                port:
                  number: 80
